[project]
name = "flappy-window"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "comtypes==1.4.11",
    "docopt==0.6.2",
    "idna==3.10",
    "pillow==11.2.1",
    "playsound==1.2.2",
    "psutil==7.0.0",
    "pycaw==20240210",
    "tk==0.1.0",
    "urllib3==2.5.0",
    "volume-control==0.9.2",
    "wxPython==4.2.3",
    "yarg==0.1.10",
]
